// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UrlsCardRow renders with baseline-aware URLs 1`] = `
<SimpleCardRow
  content={
    <ul
      className="urlsRowContent"
    >
      <li>
        <NewTabLinkWithConfirmationDialog
          href="https://www.test.com"
        >
          https://www.test.com
        </NewTabLinkWithConfirmationDialog>
      </li>
      <li>
        <NewTabLinkWithConfirmationDialog
          href="https://www.test.com/more/tests"
        >
          https://www.test.com/more/tests
        </NewTabLinkWithConfirmationDialog>
      </li>
      <li>
        <NewTabLinkWithConfirmationDialog
          href="https://www.test.com/still/more/tests"
        >
          https://www.test.com/still/more/tests
        </NewTabLinkWithConfirmationDialog>
        <span
          className="urlsRowContentNewFailure"
        >
            NEW!
        </span>
      </li>
    </ul>
  }
  label="URL"
  rowKey="urls-row--1"
/>
`;

exports[`UrlsCardRow renders with string-only URLs 1`] = `
<SimpleCardRow
  content={
    <ul
      className="urlsRowContent"
    >
      <li>
        <NewTabLinkWithConfirmationDialog
          href="https://www.test.com"
        >
          https://www.test.com
        </NewTabLinkWithConfirmationDialog>
      </li>
      <li>
        <NewTabLinkWithConfirmationDialog
          href="https://www.test.com/more/tests"
        >
          https://www.test.com/more/tests
        </NewTabLinkWithConfirmationDialog>
      </li>
    </ul>
  }
  label="URL"
  rowKey="urls-row--1"
/>
`;
